fixed ' ' error and jumping off layout

--- a/homeworks/olha.tymchyshyn_olyatmchshn/5-logic/styles.css
+++ b/homeworks/olha.tymchyshyn_olyatmchshn/5-logic/styles.css
@@ -53,6 +53,7 @@ button {
 }
 
 span {
+  width: 250px;
   color: #221F1F;
   font-family: Roboto;
   font-size: 22px;
